--- a/to-do-react-app/src/index.css
+++ b/to-do-react-app/src/index.css
@@ -1,4 +1,3 @@
-/* index.css */
 html,
 body {
   margin: 0;
@@ -126,7 +125,7 @@ body {
   height: 34px;
   font-size: 0;
   position: absolute;
-  top: -52px;
+  top: 11px;
   left: -13px;
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
@@ -417,4 +416,51 @@ meta,
 [property="todo"] .view:focus-within .toggle,
 [property="todo"] .view:focus-within button {
   display: none !important;
+}
+
+form {
+  position: relative;
+}
+
+.round {
+  position: absolute;
+}
+
+.round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  left: 9px;
+  position: absolute;
+  top: -45px;
+  width: 28px;
+}
+
+.round label:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.round input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
 }
